0.27 

  Use $ENV{QMAIL} to override /var/qmail for where to find the
  control/ directory.

  Enable "check_earlytalker" in the default plugins config

  [.. todo, fill in older changes ..] spf changes etc?

0.26 - 2003/06/11

  Add queue/smtp-forward plugin (Matt Sergeant)

  Add documentation to Qpsmtpd::Transaction (Matt Sergeant)

  Fix bug in dnsbl that made it sometimes ignore "hits" (thanks to
  James H. Thompson <jht@lava.net>)

  Fix bug hiding the error message when an existing configuration file
  isn't readable.

  If a plugin running the ehlo hook add something to the ARRAY
  reference $self->transaction->notes('capabilities') then it will be
  added to the EHLO response.

  Add command_counter method to the SMTP object.  Plugins can use this
  to catch (or not) consecutive commands.  In particular useful with
  the unrecognized_command hook.

  Filter out all uncommon characters from the remote_host
  setting. (thanks to Frank Denis / Jedi/Sector One for the hint).

  Added a check for the spool_dir having mode 0700.

  Don't break under taint mode on OpenBSD. (thanks to Frank Denis /
  Jedi/Sector One)

  Have the qmail-queue plugin add the message-id to the "Queued!"
  message we send back to the client (to help those odd sendmail using
  people debug their logs)

  Set the process name to "qpsmtpd [1.2.3.4 : host.name.tld]"

  Fixed timeout bug when the client sent DATA and then stopped before
  sending the next line. (Gergely Risko <risko@risko.hu>) 

  unrecognized_command hook and a count_unrecognized_commands
  plugin. (Rasjid Wilcox)

  check_earlytalker plugin.  Deny the connection if the client talks
  before we show our SMTP banner.  (From Devin Carraway)

  Patch Qpsmtpd::SMTP to allow connect plugins to give DENY and
  DENYSOFT return codes.  Based on patch from Devin Carraway.

  Support morercpthosts.cdb

  config now takes an extra "type" parameter.  If it's "map" then a
  reference to a tied hash will be returned.


0.25 - 2003/03/18